# src/controllers/authController.js
@@ -6,10 +6,10 @@ const CustomError = require("../errors/customError");
 const passwordEncryptor = require("../helpers/passwordEncryptor");
 // const { Token } = require("../models/tokenModel");
 const { User } = require("../models/userModel");
-const generateToken = require("../helpers/generateToken");
+const generateToken = require("../helpers/generateToken"); 
 
 module.exports.auth = {
- signUp: async (req, res) => {
+  signUp: async (req, res) => {
     /* 
             #swagger.tags = ["Authentication"]
             #swagger.summary = "Register"
@@ -62,40 +62,74 @@ module.exports.auth = {
 
 
         */
-            const {fullName,username,email,password,confirmedPassword,gender} = req.body;
-            // if(!fullName || !username || !email || !password || !confirmedPassword || !gender){
-            //     throw new CustomError('fullName,username,email, password,confirmedPassword,gender fileds are required is not same!',400);
-       
-            // }
+    const { fullName, username, email, password, confirmedPassword, gender } =
+      req.body;
+    // if(!fullName || !username || !email || !password || !confirmedPassword || !gender){
+    //     throw new CustomError('fullName,username,email, password,confirmedPassword,gender fileds are required is not same!',400);
 
-            if(password !== confirmedPassword){
-                throw new CustomError('Password and Confirmed password is not same!',400);
-            }
-            req.body?.isAdmin && delete req.body.isAdmin;
+    // }
 
-            if(req?.file){
-                req.body.profilePic = "http://localhost:8000/api/pics/" + req.file.filename
-              }else{
-                req.body.gender === 'male' ?
-                req.body.profilePic = "https://avatar.iran.liara.run/public/boy"
-                :
-                req.body.profilePic = "https://avatar.iran.liara.run/public/girl"
-                ;
-              }
+    if (password !== confirmedPassword) {
+      throw new CustomError(
+        "Password and Confirmed password is not same!",
+        400
+      );
+    }
+    req.body?.isAdmin && delete req.body.isAdmin;
+
+    if (req?.file) {
+      req.body.profilePic =
+        "http://localhost:8000/api/pics/" + req.file.filename;
+    } else {
+      req.body.gender === "male"
+        ? (req.body.profilePic = "https://avatar.iran.liara.run/public/boy")
+        : (req.body.profilePic = "https://avatar.iran.liara.run/public/girl");
+    }
+
+    const newUser = await User.create(req.body);
+    if (newUser) {
+      await newUser.save();
+    }
 
 
-            const newUser = await User.create(req.body)
-            if(newUser){
-                generateToken(newUser?._id, res)
-                await newUser.save()
-            }
-            
-            res.status(201).json({
-                error:false,
-                message:'New user is created!',
-                user:newUser
-            })
 
+
+    
+    const accessData = {
+      _id: newUser?._id,
+      username: newUser?.newUsername,
+      email: newUser?.email,
+      isAdmin: newUser?.isAdmin,
+    };
+    const refreshData = {
+      username: newUser?.username,
+      password: newUser?.password,
+    };
+
+    // JWT:
+    const accessToken = jwt.sign(accessData, process.env.ACCESS_KEY, {
+      expiresIn: "30m",
+    });
+    const refreshToken = jwt.sign(refreshData, process.env.REFRESH_KEY, {
+      expiresIn: "3d",
+    });
+
+    generateToken(accessToken, res);
+  
+
+
+
+
+
+    res.status(201).json({
+      error: false,
+      message: "New user is created!",
+      bearer: {
+        accessToken,
+        refreshToken,
+      },
+      user: newUser,
+    });
   },
   login: async (req, res) => {
     /* 
@@ -122,7 +156,11 @@ module.exports.auth = {
             description: 'Successfully Logined!',
             schema: { 
                 error: false,
-                message: "Login is OK!",
+                message: "Login is OK!", 
+                bearer:{
+                    accessToken: 'access token',
+                    refreshToken: 'refresh token'
+                },
                 user:{
                   "_id": "66362c828c9af95390f5aae5",
                   "fullName":"full name",
@@ -145,15 +183,11 @@ module.exports.auth = {
 
 
         */
-       /**
+    /**
         
-                    token: 'tokenkey',
-                    bearer:{
-                        accessToken: 'access token',
-                        refreshToken: 'refresh token'
-                    },
+                    
         */
-       //</br>- Your account is not active - please contact with support!
+    //</br>- Your account is not active - please contact with support!
 
     const { username, email, password } = req.body;
     if (!(username || email) || !password) {
@@ -178,8 +212,28 @@ module.exports.auth = {
       throw new CustomError("Unauthorized - Invalid password!", 401);
     }
 
-    generateToken(user?._id,res);
+   
 
+    const accessData = {
+      _id: user?._id,
+      username: user?.username,
+      email: user?.email,
+      isAdmin: user?.isAdmin,
+    };
+    const refreshData = {
+      username: user?.username,
+      password: user?.password,
+    };
+
+    // JWT:
+    const accessToken = jwt.sign(accessData, process.env.ACCESS_KEY, {
+      expiresIn: "30m",
+    });
+    const refreshToken = jwt.sign(refreshData, process.env.REFRESH_KEY, {
+      expiresIn: "3d",
+    });
+
+    generateToken(accessToken, res);
 
     // //token auth
     // let tokenData = await Token.findOne({ userId: user?._id });
@@ -210,133 +264,127 @@ module.exports.auth = {
     //   expiresIn: "1d",
     // });
 
-
-
-
     res.status(200).json({
       error: false,
       message: "Login is OK!",
-    //   token: tokenData?.token,
-    //   bearer: {
-    //     accessToken,
-    //     refreshToken,
-    //   },
-      user:{
-        _id:user?._id,
+      //   token: tokenData?.token,
+      bearer: {
+        accessToken,
+        refreshToken,
+      },
+      user: {
+        _id: user?._id,
         fullName: user?.fullName,
-        username:user?.username,
-        profilePic:user?.profilePic,
-      }
+        username: user?.username,
+        profilePic: user?.profilePic,
+      },
     });
   },
-//   refresh: async (req, res) => {
-//     /* 
-//             #swagger.tags = ["Authentication"]
-//             #swagger.summary = "Refresh token"
-//             #swagger.description = `
-//                 Refresh the access token with refresh token!</br></br> 
-//                 <b>Permission= No Permission</b></br></br>
-//                 - Required fields: - bearer. refresh Token</br>
-//             `
-//             #swagger.parameters['body']={
-//                 in:'body',
-//                 required:true,
-//                 schema:{
-//                     "bearer":{
-//                         "refresh Token": "...refresh token"
-//                     }
+  refresh: async (req, res) => {
+    /*
+              #swagger.tags = ["Authentication"]
+              #swagger.summary = "Refresh token"
+              #swagger.description = `
+                  Refresh the access token with refresh token!</br></br>
+                  <b>Permission= No Permission</b></br></br>
+                  - Required fields: - bearer. refresh Token</br>
+              `
+              #swagger.parameters['body']={
+                  in:'body',
+                  required:true,
+                  schema:{
+                      "bearer":{
+                          "refresh Token": "...refresh token"
+                      }
 
-//                 }
-//             }
-//             #swagger.responses[200] = {
-//             description: 'Successfully refreshed!',
-//             schema: { 
-//                 error: false,
-//                 message: "Access token is refreshed!!",
-//                 result:{ 
-//                     bearer:{ 
-//                         'accessToken': 'access token'
-//                     }
-//                 } 
-//             }
+                  }
+              }
+              #swagger.responses[200] = {
+              description: 'Successfully refreshed!',
+              schema: {
+                  error: false,
+                  message: "Access token is refreshed!!",
+                  result:{
+                      bearer:{
+                          'accessToken': 'access token'
+                      }
+                  }
+              }
 
-//         }  
-//             #swagger.responses[400] = {
-//             description:`Bad request - bearer.refreshToken is a required field!`
-//             }
-//             #swagger.responses[401] = {
-//             description:`Unauthorized: 
-//                     </br>- Unauhtorized - Invalid signature - invalid token or token is expired!!
-//                     </br>- Unauhtorized - Your account is not active - please contact with support!!!
-//                     </br>- User not found!
-//                     </br>- Invalid password!
-//                     `
-//             }
+          }
+              #swagger.responses[400] = {
+              description:`Bad request - bearer.refreshToken is a required field!`
+              }
+              #swagger.responses[401] = {
+              description:`Unauthorized:
+                      </br>- Unauhtorized - Invalid signature - invalid token or token is expired!!
+                      </br>- Unauhtorized - Your account is not active - please contact with support!!!
+                      </br>- User not found!
+                      </br>- Invalid password!
+                      `
+              }
 
+          */
+    const refreshToken = req?.body?.bearer?.refreshToken;
+    if (!refreshToken) {
+      throw new CustomError("bearer.refreshToken is a required field!", 400);
+    }
 
+    let decodedData = false;
+    jwt.verify(refreshToken, process.env.REFRESH_KEY, (err, decoded) => {
+      if (err) {
+        throw new CustomError(
+          "Unauhtorized - Invalid signature - invalid token or token is expired!!",
+          401
+        );
+      }
+      decodedData = decoded;
+    });
 
-//         */
-//     // const refreshToken = req?.body?.bearer?.refreshToken;
-//     // if (!refreshToken) {
-//     //   throw new CustomError("bearer.refreshToken is a required field!", 400);
-//     // }
+    console.log(decodedData);
 
-//     // let decodedData = false;
-//     // jwt.verify(refreshToken, process.env.REFRESH_KEY, (err, decoded) => {
-//     //   if (err) {
-//     //     throw new CustomError(
-//     //       "Unauhtorized - Invalid signature - invalid token or token is expired!!",
-//     //       401
-//     //     );
-//     //   }
-//     //   decodedData = decoded;
-//     // });
+    if (!decodedData) {
+      throw new CustomError(
+        "Unauhtorized - Invalid signature - invalid token or token is expired!",
+        401
+      );
+    }
 
-//     // console.log(decodedData);
+    const user = await User.findOne({ username: decodedData?.username });
+    if (!user) {
+      throw new CustomError("Unauhtorized - User not found!", 401);
+    }
+    // if (!user?.isActive) {
+    //   throw new CustomError(
+    //     "Unauthorized - Your account is not active - please contact with support!",
+    //     401
+    //   );
+    // }
 
-//     // if (!decodedData) {
-//     //   throw new CustomError(
-//     //     "Unauhtorized - Invalid signature - invalid token or token is expired!",
-//     //     401
-//     //   );
-//     // }
+    if (user?.password !== decodedData?.password) {
+      throw new CustomError("Unauhtorized - Invalid password!", 401);
+    }
 
-//     // const user = await User.findOne({ username: decodedData?.username });
-//     // if (!user) {
-//     //   throw new CustomError("Unauhtorized - User not found!", 401);
-//     // }
-//     // if (!user?.isActive) {
-//     //   throw new CustomError(
-//     //     "Unauthorized - Your account is not active - please contact with support!",
-//     //     401
-//     //   );
-//     // }
+    const accessData = {
+      _id: user?._id,
+      username: user?.username,
+      email: user?.email,
+      isAdmin: user?.isAdmin,
+    };
 
-//     // if (user?.password !== decodedData?.password) {
-//     //   throw new CustomError("Unauhtorized - Invalid password!", 401);
-//     // }
+    const accessToken = jwt.sign(accessData, process.env.ACCESS_KEY, {
+      expiresIn: "30m",
+    });
 
-//     // const accessData = {
-//     //   _id: user?._id,
-//     //   username: user?.username,
-//     //   isAdmin: user?.isAdmin,
-//     //   isActive: user?.isActive,
-//     //   isStaff: user?.isStaff,
-//     // };
-
-//     // const accessToken = jwt.sign(accessData, process.env.ACCESS_KEY, {
-//     //   expiresIn: "30m",
-//     // });
-
-//     // res.status(200).json({
-//     //   error: false,
-//     //   message: "Access token is refreshed!!",
-//     //   bearer: {
-//     //     accessToken,
-//     //   },
-//     // });
-//   },
-  logout:  (req, res) => {
+    res.status(200).json({
+      error: false,
+      message: "Access token is refreshed!!",
+      bearer: {
+        accessToken,
+      },
+    });
+  },
+  logout: (req, res) => {
     /* 
             #swagger.tags = ["Authentication"]
             #swagger.summary = "Logout"
@@ -357,20 +405,19 @@ module.exports.auth = {
 
 
         */
-       //Logout with with token or with out token!</br></br>
+    //Logout with with token or with out token!</br></br>
     //    result:{
     //     deletedToken: 1
-    //    } 
-
+    //    }
 
     // const result = await Token.deleteOne({ userId: req?.user?._id });
-res.cookie("jwt","",{
-    maxAge:0
-})
+    res.cookie("jwt", "", {
+      maxAge: 0,
+    });
     res.json({
       error: false,
       message: "Logout is OK!",
-    //   result
+      //   result
     });
   },
 };
