# src/routes/authRouter.js
@@ -13,7 +13,7 @@ const upload = require('../middlewares/upload');
 
 router.post('/signup',upload.single('image') ,auth.signUp);
 router.post('/login',auth.login);
-// router.post('/refresh',auth.refresh);
+router.post('/refresh',auth.refresh);
 router.get('/logout',auth.logout);
 
 
